--- a/index.ipynb
+++ b/index.ipynb
@@ -26,11 +26,11 @@
     "\n",
     "We can now state our null hypothesis as:\n",
     "\n",
-    "**$h_0: effectiveness $drug_a=.76$**\n",
+    "**$H_0$: effectiveness drug_a = 0.76**\n",
     "\n",
     "## The alternative hypothesis\n",
     "\n",
-    "**$h_1: effectiveness $drug_a>.76$**\n",
+    "**$H_1$: effectiveness drug_a > 0.76**\n",
     "\n",
     "## Test Statistic\n",
     "\n",
